--- a/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_codice_global_cdf_attrs.yaml
@@ -21,98 +21,98 @@ imap_codice_l1a_hskp:
     Logical_source: imap_codice_l1a_hskp
     Logical_source_description: IMAP Mission CoDICE Instrument Level-1A Housekeeping Data.
 
-imap_codice_l1a_hi_counters_aggregated:
+imap_codice_l1a_hi-counters-aggregated:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_hi-counters-aggregated->Level-1A Hi Aggregated Instrument Counts Data
     Logical_source: imap_codice_l1a_hi-counters-aggregated
     Logical_source_description: IMAP Mission CoDICE Hi Level-1A Aggregated Instrument Counts Data.
 
-imap_codice_l1a_hi_counters_singles:
+imap_codice_l1a_hi-counters-singles:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_hi-counters-singles->Level-1A Hi Single Instrument Counts Data
     Logical_source: imap_codice_l1a_hi-counters-singles
     Logical_source_description: IMAP Mission CoDICE Hi Level-1A Single Instrument Counts Data.
 
-imap_codice_l1a_hi_omni:
+imap_codice_l1a_hi-omni:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_hi-omni->Level-1A Hi Omnidirectional Data
     Logical_source: imap_codice_l1a_hi-omni
     Logical_source_description: IMAP Mission CoDICE Hi Level-1A Omnidirectional Data.
 
-imap_codice_l1a_hi_sectored:
+imap_codice_l1a_hi-sectored:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_hi-sectored->Level-1A Hi Sectored Data
     Logical_source: imap_codice_l1a_hi-sectored
     Logical_source_description: IMAP Mission CoDICE Hi Level-1A Sectored Data.
 
-imap_codice_l1a_hi_pha:
+imap_codice_l1a_hi-pha:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_hi-pha->Level-1A Hi Event Data
     Logical_source: imap_codice_l1a_hi-pha
     Logical_source_description: IMAP Mission CoDICE Hi Level-1A Event Data.
 
-imap_codice_l1a_lo_counters_aggregated:
+imap_codice_l1a_lo-counters-aggregated:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-counters-aggregated->Level-1A Lo Aggregated Instrument Counts Data
     Logical_source: imap_codice_l1a_lo-counters-aggregated
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Aggregated Instrument Counts Data.
 
-imap_codice_l1a_lo_counters_singles:
+imap_codice_l1a_lo-counters-singles:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-counters-aggregated->Level-1A Lo Single Instrument Counts Data
     Logical_source: imap_codice_l1a_lo-counters-singles
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Single Instrument Counts Data.
 
-imap_codice_l1a_lo_sw_angular:
+imap_codice_l1a_lo-sw-angular:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-sw-angular->Level-1A Lo Sunward Angular Counts Data
     Logical_source: imap_codice_l1a_lo-sw-angular
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Angular Counts Data.
 
-imap_codice_l1a_lo_nsw_angular:
+imap_codice_l1a_lo-nsw-angular:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-nsw-angular->Level-1A Lo Non-Sunward Angular Counts Data
     Logical_source: imap_codice_l1a_lo-nsw-angular
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Angular Counts Data.
 
-imap_codice_l1a_lo_sw_priority:
+imap_codice_l1a_lo-sw-priority:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-sw-priority->Level-1A Lo Sunward Priority Counts Data
     Logical_source: imap_codice_l1a_lo-sw-priority
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Priority Counts Data.
 
-imap_codice_l1a_lo_nsw_priority:
+imap_codice_l1a_lo-nsw-priority:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-nsw-priority->Level-1A Lo Non-Sunward Priority Counts Data
     Logical_source: imap_codice_l1a_lo-nsw-priority
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Priority Counts Data.
 
-imap_codice_l1a_lo_sw_species:
+imap_codice_l1a_lo-sw-species:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-sw-species->Level-1A Lo Sunward Species Counts Data
     Logical_source: imap_codice_l1a_lo-sw-species
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Sunward Species Counts Data.
 
-imap_codice_l1a_lo_nsw_species:
+imap_codice_l1a_lo-nsw-species:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-nsw-species->Level-1A Lo Non-Sunward Species Counts Data
     Logical_source: imap_codice_l1a_lo-nsw-species
     Logical_source_description: IMAP Mission CoDICE Lo Level-1A Non-Sunward Species Counts Data.
 
-imap_codice_l1a_lo_pha:
+imap_codice_l1a_lo-pha:
     <<: *instrument_base
     Data_level: 1A
     Data_type: L1A_lo-pha->Level-1A Lo Event Data
