Most of L1B validation, and renaming things

--- a/imap_processing/cdf/config/imap_glows_l1b_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_glows_l1b_variable_attrs.yaml
@@ -67,7 +67,7 @@ histogram_dim:
   FIELDNAM: Histogram of direct events
   FORMAT: F2.4
 
-histograms:
+histogram:
   <<: *default
   DEPEND_1: bins
   CATDESC: array of block-accumulated counts as histograms
